form modal提示框 Signed-off-by: lnn <1158947323@qq.com>

--- a/from/index.html
+++ b/from/index.html
@@ -13,7 +13,7 @@
    <meta name="apple-touch-fullscreen" content="yes"/>
    <meta name="description" content=""> -->
 
-  <title>督导平台</title>
+  <title>modal</title>
   <!-- 引入样式 -->
   <link href="./static/main.css" rel="stylesheet" type="text/css" />
   <!-- Polyfills -->
