bmap Signed-off-by: lnn <1158947323@qq.com>

--- a/from/index.html
+++ b/from/index.html
@@ -30,6 +30,7 @@
   <script src="//cdn.bootcss.com/antd/2.6.4/antd.min.js"></script>
   <link href="//cdn.bootcss.com/antd/2.6.4/antd.min.css" rel="stylesheet"  type="text/css"/>
   <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+  <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=bPxv5LdsECV1EOQUpR0nCvCDZbL7U57N"></script>
 </head>
 <body>
 <div id="main" style="height:100%/*;overflow-y: hidden*/"></div>
